--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/app_icon"
+        android:icon="@mipmap/ic_launcher"
+        android:name=".App"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UnZip"
+        android:theme="@style/AppTheme"
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
