Added extraction support for RAR #5 updated dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     //apache commons compress
-    implementation 'org.apache.commons:commons-compress:1.23.0'
+    implementation 'org.apache.commons:commons-compress:1.25.0'
     implementation 'org.tukaani:xz:1.9'
 
     //zip4j
     implementation 'net.lingala.zip4j:zip4j:2.11.5'
+
+    implementation 'com.github.omicronapps:7-Zip-JBinding-4Android:Release-16.02-2.02'
 
 }
