--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
                 <data android:mimeType="*/*" />
             </intent-filter>
             <intent-filter
-                android:label="ZipXtract"
+                android:label="ZipXtract FD"
                 tools:ignore="AppLinkUrlError">
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
