--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable = false
+            applicationIdSuffix '.release'
+            versionNameSuffix '-release'
         }
         debug {
             debuggable = true
