migrate to fragment from activity, add archive fragment, refactor code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,14 +61,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
 
-    //AndroidX Lifecycle
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
+    //fragment
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
 
-    //AndroidX Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
 
     //apache commons compress
     implementation 'org.apache.commons:commons-compress:1.27.1'
