--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,6 @@
         android:icon="@mipmap/ic_launcher"
         android:name=".App"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31" >
         <activity
@@ -48,29 +47,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-                <action android:name="android.intent.action.SEND_MULTIPLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="*/*" />
-            </intent-filter>
-            <intent-filter
-                android:label="ZipXtract"
-                tools:ignore="AppLinkUrlError">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <data android:mimeType="*/*"/>
-
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-
-        <activity
-            android:name=".PickedFilesActivity"
-            android:exported="true" >
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -86,6 +62,18 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name=".activity.OpenWithActivity"
+            android:theme="@style/AppTheme.Transparent"
+            android:exported="true">
+            <intent-filter android:label="Extract"
+                tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".service.ExtractArchiveService"
@@ -136,8 +124,6 @@
             android:name=".service.ArchiveTarService"
             android:foregroundServiceType="dataSync"
             android:exported="false" />
-
-
 
     </application>
 
