--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.SettingsActivity"/>
+
         <service
             android:name=".service.ExtractArchiveService"
             android:foregroundServiceType="dataSync"
