--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:preserveLegacyExternalStorage="true"
+        android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
         android:name=".App"
         android:label="@string/app_name"
