--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
     //fragment
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
 
-
     //apache commons compress
     implementation 'org.apache.commons:commons-compress:1.27.1'
     implementation 'org.tukaani:xz:1.10'
@@ -74,6 +73,8 @@ dependencies {
     //7-Zip-Jbinding-4Android
     implementation 'com.github.omicronapps:7-Zip-JBinding-4Android:Release-16.02-2.02'
 
+    //libarchive
+    implementation 'me.zhanghai.android.libarchive:library:1.1.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
