--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,11 @@
                 <category android:name="android.intent.category.OPENABLE" />
                 <data android:mimeType="*/*" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".activity.SettingsActivity"/>
@@ -138,7 +143,5 @@
             android:name=".service.CopyMoveService"
             android:foregroundServiceType="dataSync"
             android:exported="false" />
-
     </application>
-
 </manifest>
