--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     //libarchive
     implementation 'me.zhanghai.android.libarchive:library:1.1.4'
 
+    implementation "com.github.luben:zstd-jni:1.5.7-2@aar"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
