--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation 'me.zhanghai.android.libarchive:library:1.1.4'
 
     implementation "com.github.luben:zstd-jni:1.5.7-2@aar"
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
