--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.wirelessalien.zipxtract'
-    compileSdk 34
+    compileSdk = 35
 
     defaultConfig {
         applicationId "com.wirelessalien.zipxtract"
         minSdk 24
-        targetSdk 34
+        targetSdk 35
         versionCode 20
         versionName "5.4.1"
 
@@ -65,41 +65,41 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.core:core-ktx:1.16.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.13.0-alpha08'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.14.0-alpha06'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.preference:preference-ktx:1.2.1'
 
     //glide
-    implementation("com.github.bumptech.glide:glide:4.16.0")
+    implementation("com.github.bumptech.glide:glide:5.0.5")
 
     //Kotlin Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
 
     //fragment
-    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.fragment:fragment-ktx:1.8.7'
 
     //apache commons compress
-    implementation 'org.apache.commons:commons-compress:1.27.1'
+    implementation 'org.apache.commons:commons-compress:1.28.0'
     implementation 'org.tukaani:xz:1.10'
 
     //zip4j
     implementation 'net.lingala.zip4j:zip4j:2.11.5'
 
     //7-Zip-Jbinding-4Android
-    implementation 'com.github.omicronapps:7-Zip-JBinding-4Android:Release-16.02-2.02'
+    implementation 'com.github.omicronapps:7-Zip-JBinding-4Android:Release-16.02-2.03'
 
     //libarchive
-    implementation 'me.zhanghai.android.libarchive:library:1.1.4'
+    implementation 'me.zhanghai.android.libarchive:library:1.1.6'
 
-    implementation "com.github.luben:zstd-jni:1.5.7-2@aar"
+    implementation "com.github.luben:zstd-jni:1.5.7-6@aar"
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
