--- a/.github/workflows/test_release2.yml
+++ b/.github/workflows/test_release2.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Sign AAB with jarsigner
         id: sign_aab
         env:
-          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE_2 }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD_2 }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD_2 }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS_2 }}
+          KEYSTORE_FILE_2: ${{ secrets.KEYSTORE_FILE_2 }}
+          KEYSTORE_PASSWORD_2: ${{ secrets.KEYSTORE_PASSWORD_2 }}
+          KEY_PASSWORD_2: ${{ secrets.KEY_PASSWORD_2 }}
+          KEY_ALIAS_2: ${{ secrets.KEY_ALIAS_2 }}
         run: |
           set -e
           AAB_SRC="app/build/outputs/bundle/release/app-release.aab"
