--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.14.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-beta01'
 
     //glide
     implementation("com.github.bumptech.glide:glide:5.0.5")
