add search history - migrate to m3 searchview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-beta01'
+    implementation 'com.google.code.gson:gson:2.13.1'
 
     //glide
     implementation("com.github.bumptech.glide:glide:5.0.5")
