specify openable archive mime (Manifest)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,40 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
-                <data android:mimeType="*/*" />
+                <data android:mimeType="application/x-7z-compressed" />
+                <data android:mimeType="application/zip" />
+                <data android:mimeType="application/x-rar-compressed" />
+                <data android:mimeType="application/x-tar" />
+                <data android:mimeType="application/gzip" />
+                <data android:mimeType="application/x-bzip2" />
+                <data android:mimeType="application/x-xz" />
+                <data android:mimeType="application/x-iso9660-image" />
+                <data android:mimeType="application/x-cpio" />
+                <data android:mimeType="application/x-arj" />
+                <data android:mimeType="application/x-lzh" />
+                <data android:mimeType="application/x-cab" />
+                <data android:mimeType="application/vnd.ms-htmlhelp" />
+                <data android:mimeType="application/x-debian-package" />
+                <data android:mimeType="application/x-redhat-package-manager" />
+                <data android:mimeType="application/x-compress" />
+                <data android:mimeType="application/x-apple-diskimage" />
+                <data android:mimeType="application/x-ms-wim" />
+                <data android:mimeType="application/x-xar" />
+                <data android:mimeType="application/x-nsis-installer" />
+                <data android:mimeType="application/x-ar" />
+                <data android:mimeType="application/x-dump" />
+                <data android:mimeType="application/x-lzma" />
+                <data android:mimeType="application/x-java-pack200" />
+                <data android:mimeType="application/x-snappy-framed" />
+                <data android:mimeType="application/x-lz4" />
+                <data android:mimeType="application/zstd" />
+                <data android:mimeType="application/x-brotli" />
+                <data android:mimeType="application/deflate64" />
+                <data android:mimeType="application/x-mtree" />
+                <data android:mimeType="application/x-shar" />
+                <data android:mimeType="application/vnd.ms-cab-compressed" />
+                <data android:mimeType="application/x-lzip" />
+                <data android:mimeType="application/x-lzop" />
             </intent-filter>
             <intent-filter android:label="@string/archive"
                 tools:ignore="AppLinkUrlError">
