--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,11 +68,13 @@
         <activity android:name=".activity.OpenWithActivity"
             android:theme="@style/AppTheme.Transparent"
             android:exported="true">
+            
             <intent-filter android:label="@string/extract"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
+                
                 <data android:mimeType="application/x-7z-compressed" />
                 <data android:mimeType="application/zip" />
                 <data android:mimeType="application/x-rar-compressed" />
@@ -107,13 +109,52 @@
                 <data android:mimeType="application/vnd.ms-cab-compressed" />
                 <data android:mimeType="application/x-lzip" />
                 <data android:mimeType="application/x-lzop" />
+
+                <data android:scheme="file" />
+                <data android:scheme="content" />
+                <data android:host="*" />
+                <data android:pathPattern=".*\\.7z" />
+                <data android:pathPattern=".*\\.zip" />
+                <data android:pathPattern=".*\\.rar" />
+                <data android:pathPattern=".*\\.tar" />
+                <data android:pathPattern=".*\\.gz" />
+                <data android:pathPattern=".*\\.bz2" />
+                <data android:pathPattern=".*\\.xz" />
+                <data android:pathPattern=".*\\.iso" />
+                <data android:pathPattern=".*\\.cpio" />
+                <data android:pathPattern=".*\\.arj" />
+                <data android:pathPattern=".*\\.lzh" />
+                <data android:pathPattern=".*\\.lha" />
+                <data android:pathPattern=".*\\.cab" />
+                <data android:pathPattern=".*\\.chm" />
+                <data android:pathPattern=".*\\.deb" />
+                <data android:pathPattern=".*\\.rpm" />
+                <data android:pathPattern=".*\\.Z" />
+                <data android:pathPattern=".*\\.dmg" />
+                <data android:pathPattern=".*\\.wim" />
+                <data android:pathPattern=".*\\.xar" />
+                <data android:pathPattern=".*\\.exe" />
+                <data android:pathPattern=".*\\.a" />
+                <data android:pathPattern=".*\\.dump" />
+                <data android:pathPattern=".*\\.lzma" />
+                <data android:pathPattern=".*\\.pack" />
+                <data android:pathPattern=".*\\.sz" />
+                <data android:pathPattern=".*\\.lz4" />
+                <data android:pathPattern=".*\\.zst" />
+                <data android:pathPattern=".*\\.br" />
+                <data android:pathPattern=".*\\.mtree" />
+                <data android:pathPattern=".*\\.shar" />
+                <data android:pathPattern=".*\\.lz" />
+                <data android:pathPattern=".*\\.lzo" />
             </intent-filter>
+
             <intent-filter android:label="@string/archive"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="*/*" />
             </intent-filter>
+
             <intent-filter android:label="@string/archive"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.SEND_MULTIPLE" />
